[package]
name = "gpu-bench"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Importante para WASM

[dependencies]
wgpu = "0.19"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4" # GPU é async, precisamos disso no browser
bytemuck = { version = "1.14", features = ["derive"] }
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }
futures = "0.3"
console_error_panic_hook = "0.1"