[package]
name = "gpu-physics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# wgpu 23.0 remove o problema de compatibilidade com Chrome/Android
wgpu = "23.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }
futures = "0.3"
console_error_panic_hook = "0.1"