[package]
name = "sync-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# AS DUAS QUE FALTAVAM:
uuid = { version = "1.0", features = ["v4", "serde"] }
actix-files = "0.6"